--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-  </head>
   <body>
+  </head>
     <header class="header">
       <div class="header-style container">
         <section class="logo-box">
@@ -69,152 +69,163 @@
     </header>
     <main>
         <section class="container">
-          <ul class="top-section-list">
-            <li>
-              <button type="button" class="button-portfolio blue-background">
-                Wszystkie
-              </button>
-            </li>
-            <li>
-              <button type="button" class="button-portfolio blue-background">
-                Strony
-              </button>
-            </li>
-            <li>
-              <button type="button" class="button-portfolio blue-background">
-                Aplikacje
-              </button>
-            </li>
-            <li>
-              <button type="button" class="button-portfolio blue-background">
-                Dizajn
-              </button>
-            </li>
-            <li>
-              <button type="button" class="button-portfolio blue-background">
-                Marketing
-              </button>
-            </li>
-          </ul>
-          <ul class="project-list">
-            <li class="portfolio-border">
-              <img
-                src="./images/techno.jpg"
-                alt="monitor screen"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Technocrack</h5>
-              <p class="project-description">Strona internetowa</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/basketball.jpg"
-                alt="two basketball players fight for a ball"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Grafika New Orlean vs Golden Star</h5>
-              <p class="project-description">Dizajn</p>
-            </li>
-            <li>
-              <img
-                src="./images/restaurant.jpg"
-                alt="The seafood restaurant logo"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Restauracja Seafood</h5>
-              <p class="project-description">Aplikacja</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/music.jpg"
-                alt="black headphones"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Projekt Prime</h5>
-              <p class="project-description">Marketing</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/box.jpg"
-                alt="brown and white boxes"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Projekt Boxes</h5>
-              <p class="project-description">Aplikacja</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/tv.jpg"
-                alt="black monitor with some codes"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Inspiration has no Borders</h5>
-              <p class="project-description">Strona internetowa</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/book.jpg"
-                alt="magazine pages"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Magazyn Limited Edition</h5>
-              <p class="project-description">Dizajn</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/lab.jpg.jpg"
-                alt="lab label"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Projekt LAB</h5>
-              <p class="project-description">Marketing</p>
-            </li>
-            <li class="portfolio-border">
-              <img
-                src="./images/laptop.jpg"
-                alt="open laptop"
-                height="294"
-                width="370"
-              />
-              <h5 class="project-title">Growing Business</h5>
-              <p class="project-description">Aplikacja</p>
-            </li>
-          </ul>
-        </section></container>
-    </main>
-    <footer class="footer">
-      <div class="container footer-box">
-        <a href="./index.html" class="footer-logo link-no-underline"
-          ><span class="blue-text">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-list">
-            <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-              <a
-                href="mailto:info@example.com"
-                class="address-link link-no-underline blue-text"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a
-                href="+48111111111"
-                class="address-link link-no-underline blue-text"
-                >+48 111 111 111</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </footer>
-  </body>
-</html>
+           <ul class="cards-box">
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/techno.jpg"
+                    alt="monitor screen"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Technocrack</b></p>
+                    <p class="photo-describe-portfolio">Strona internetowa</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                  <figure>
+                  <img
+                  src="./images/basketball.jpg"
+                  alt="New Orlean vs Golden Star"
+                   weidth="370"
+                   height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio">
+                      <b>Grafika New Orlean vs Golden Star</b>
+                    </p>
+                    <p class="photo-describe-portfolio">Dizajn</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/restaurant.jpg"
+                    alt="The seafood restaurant log"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Restauracja Seafood</b></p>
+                    <p class="photo-describe-portfolio">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/music.jpg"
+                    alt="black headphones"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Projekt Prime</b></p>
+                    <p class="photo-describe-portfolio">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/box.jpg"
+                    alt="brown and white boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Projekt Boxes</b></p>
+                    <p class="photo-describe-portfolio">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/tv.jpg"
+                    alt="black monitor with some codes"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Inspiration has no Borders</b></p>
+                    <p class="photo-describe-portfolio">Strona internetowa</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/book.jpg"
+                    alt="magazine pages"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Magazyn Limited Edition</b></p>
+                    <p class="photo-describe-portfolio">Dizajn</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/lab.jpg"
+                    alt="lab label"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Projekt LAB</b></p>
+                    <p class="photo-describe-portfolio">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="cards-items">
+                <figure>
+                  <img
+                    src="./images/laptop.jpg"
+                    alt="open laptop"
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="border-image">
+                    <p class="photo-portfolio"><b>Growing Business</b></p>
+                    <p class="photo-describe-portfolio">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </section></container>
+        </main>
+        <footer class="footer">
+          <div class="container footer-box">
+            <a href="./index.html" class="footer-logo link-no-underline"
+              ><span class="blue-text">Web</span>Studio</a
+            >
+            <address>
+              <ul class="footer-list">
+                <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+                <li>
+                  <a
+                    href="mailto:info@example.com"
+                    class="address-link link-no-underline blue-text"
+                    >info@example.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="+48111111111"
+                    class="address-link link-no-underline blue-text"
+                    >+48 111 111 111</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        </footer>
+      </body>
+    </html>
