--- a/portfolio.html
+++ b/portfolio.html
@@ -15,59 +15,86 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-  <body>
-  </head>
-    <header class="header">
-      <div class="header-style container">
-        <section class="logo-box">
-          <a href="./index.html" class="logo-style link-no-underline"
-            ><span class="blue-text">Web</span>Studio
-          </a>
-        </section>
-        <nav class="nav">
-          <ul class="navigate-list">
+    <body>
+      <header class="header">
+        <div class="header-style container">
+          <section class="logo-box">
+            <a href="./index.html" class="logo-style link-no-underline"
+              ><span class="blue-text">Web</span>Studio
+            </a>
+          </section>
+          <nav class="nav">
+            <ul class="navigate-list">
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  >Agencja</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./portfolio.html"
+                  class="link-style link-no-underline blue-text"
+                  ><span class="blue-text">Portfolio</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  >Kontakt</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact-style">
             <li>
               <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                >Agencja</a
+                href="mailto:info@devstudio.com"
+                class="link-no-underline contact-link-style blue-text"
+                >info@devstudio.com</a
               >
             </li>
             <li>
               <a
-                href="./portfolio.html"
-                class="link-style link-no-underline blue-text"
-                ><span class="blue-text">Portfolio</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                >Kontakt</a
+                href="+48111111111"
+                class="link-no-underline contact-link-style blue-text"
+                >+48 111 111 111</a
               >
             </li>
           </ul>
-        </nav>
-        <ul class="contact-style">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="link-no-underline contact-link-style blue-text"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a
-              href="+48111111111"
-              class="link-no-underline contact-link-style blue-text"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
-      </div>
-    </header>
-    <main>
+        </div>
+      </header>
+      <main>
+          <section class="container">
+            <ul class="top-section-list">
+              <li>
+                <button type="button" class="button-portfolio blue-background">
+                  Wszystkie
+                </button>
+              </li>
+              <li>
+                <button type="button" class="button-portfolio blue-background">
+                  Strony
+                </button>
+              </li>
+              <li>
+                <button type="button" class="button-portfolio blue-background">
+                  Aplikacje
+                </button>
+              </li>
+              <li>
+                <button type="button" class="button-portfolio blue-background">
+                  Dizajn
+                </button>
+              </li>
+              <li>
+                <button type="button" class="button-portfolio blue-background">
+                  Marketing
+                </button>
+              </li>
+            </ul>
         <section class="container">
            <ul class="cards-box">
               <li class="cards-items">
