--- a/portfolio.html
+++ b/portfolio.html
@@ -5,254 +5,255 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <body>
-      <header class="header">
-        <div class="header-style container">
-          <section class="logo-box">
-            <a href="./index.html" class="logo-style link-no-underline"
-              ><span class="blue-text">Web</span>Studio
-            </a>
-          </section>
-          <nav class="nav">
-            <ul class="navigate-list">
-              <li>
-                <a
-                  href="./index.html"
-                  class="link-style link-no-underline blue-text"
-                  >Agencja</a
-                >
-              </li>
-              <li>
-                <a
-                  href="./portfolio.html"
-                  class="link-style link-no-underline blue-text"
-                  ><span class="blue-text">Portfolio</span></a
-                >
-              </li>
-              <li>
-                <a
-                  href="./index.html"
-                  class="link-style link-no-underline blue-text"
-                  >Kontakt</a
-                >
-              </li>
-            </ul>
-          </nav>
-          <ul class="contact-style">
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-style container">
+        <section class="logo-box">
+          <a href="./index.html" class="logo-style link-no-underline"
+            ><span class="blue-text">Web</span>Studio
+          </a>
+        </section>
+        <nav class="nav">
+          <ul class="navigate-list">
             <li>
               <a
-                href="mailto:info@devstudio.com"
-                class="link-no-underline contact-link-style blue-text"
-                >info@devstudio.com</a
+                href="./index.html"
+                class="link-style link-no-underline blue-text"
+                >Agencja</a
               >
             </li>
             <li>
               <a
-                href="+48111111111"
-                class="link-no-underline contact-link-style blue-text"
-                >+48 111 111 111</a
+                href="./portfolio.html"
+                class="link-style link-no-underline blue-text"
+                ><span class="blue-text">Portfolio</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="./index.html"
+                class="link-style link-no-underline blue-text"
+                >Kontakt</a
               >
             </li>
           </ul>
-        </div>
-      </header>
-      <main>
-          <section class="container">
-            <ul class="top-section-list">
-              <li>
-                <button type="button" class="button-portfolio blue-background">
-                  Wszystkie
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button-portfolio blue-background">
-                  Strony
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button-portfolio blue-background">
-                  Aplikacje
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button-portfolio blue-background">
-                  Dizajn
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button-portfolio blue-background">
-                  Marketing
-                </button>
-              </li>
-            </ul>
-        <section class="container">
-           <ul class="cards-box">
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/techno.jpg"
-                    alt="monitor screen"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Technocrack</b></p>
-                    <p class="photo-describe-portfolio">Strona internetowa</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                  <figure>
-                  <img
-                  src="./images/basketball.jpg"
-                  alt="New Orlean vs Golden Star"
-                   weidth="370"
-                   height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio">
-                      <b>Grafika New Orlean vs Golden Star</b>
-                    </p>
-                    <p class="photo-describe-portfolio">Dizajn</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/restaurant.jpg"
-                    alt="The seafood restaurant log"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Restauracja Seafood</b></p>
-                    <p class="photo-describe-portfolio">Aplikacja</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/music.jpg"
-                    alt="black headphones"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Projekt Prime</b></p>
-                    <p class="photo-describe-portfolio">Marketing</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/box.jpg"
-                    alt="brown and white boxes"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Projekt Boxes</b></p>
-                    <p class="photo-describe-portfolio">Aplikacja</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/tv.jpg"
-                    alt="black monitor with some codes"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Inspiration has no Borders</b></p>
-                    <p class="photo-describe-portfolio">Strona internetowa</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/book.jpg"
-                    alt="magazine pages"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Magazyn Limited Edition</b></p>
-                    <p class="photo-describe-portfolio">Dizajn</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/lab.jpg"
-                    alt="lab label"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Projekt LAB</b></p>
-                    <p class="photo-describe-portfolio">Marketing</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="cards-items">
-                <figure>
-                  <img
-                    src="./images/laptop.jpg"
-                    alt="open laptop"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="border-image">
-                    <p class="photo-portfolio"><b>Growing Business</b></p>
-                    <p class="photo-describe-portfolio">Aplikacja</p>
-                  </figcaption>
-                </figure>
-              </li>
-            </ul>
-          </section></container>
-        </main>
-        <footer class="footer">
-          <div class="container footer-box">
-            <a href="./index.html" class="footer-logo link-no-underline"
-              ><span class="blue-text">Web</span>Studio</a
+        </nav>
+        <ul class="contact-style">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-no-underline contact-link-style blue-text"
+              >info@devstudio.com</a
             >
-            <address>
-              <ul class="footer-list">
-                <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-                <li>
-                  <a
-                    href="mailto:info@example.com"
-                    class="address-link link-no-underline blue-text"
-                    >info@example.com</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="+48111111111"
-                    class="address-link link-no-underline blue-text"
-                    >+48 111 111 111</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
-        </footer>
-      </body>
-    </html>
+          </li>
+          <li>
+            <a
+              href="+48111111111"
+              class="link-no-underline contact-link-style blue-text"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+        <section class="container">
+          <ul class="top-section-list">
+            <li>
+              <button type="button" class="button-portfolio blue-background">
+                Wszystkie
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio blue-background">
+                Strony
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio blue-background">
+                Aplikacje
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio blue-background">
+                Dizajn
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio blue-background">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <section class="container">
+            <ul class="cards-box">
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/techno.jpg"
+                     alt="monitor screen"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Technocrack</b></p>
+                     <p class="photo-describe-portfolio">Strona internetowa</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                   <figure>
+                   <img
+                   src="./images/basketball.jpg"
+                   alt="New Orlean vs Golden Star"
+                    weidth="370"
+                    height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio">
+                       <b>Grafika New Orlean vs Golden Star</b>
+                     </p>
+                     <p class="photo-describe-portfolio">Dizajn</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/restaurant.jpg"
+                     alt="The seafood restaurant log"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Restauracja Seafood</b></p>
+                     <p class="photo-describe-portfolio">Aplikacja</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/music.jpg"
+                     alt="black headphones"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Projekt Prime</b></p>
+                     <p class="photo-describe-portfolio">Marketing</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/box.jpg"
+                     alt="brown and white boxes"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Projekt Boxes</b></p>
+                     <p class="photo-describe-portfolio">Aplikacja</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/tv.jpg"
+                     alt="black monitor with some codes"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Inspiration has no Borders</b></p>
+                     <p class="photo-describe-portfolio">Strona internetowa</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/book.jpg"
+                     alt="magazine pages"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Magazyn Limited Edition</b></p>
+                     <p class="photo-describe-portfolio">Dizajn</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/lab.jpg"
+                     alt="lab label"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Projekt LAB</b></p>
+                     <p class="photo-describe-portfolio">Marketing</p>
+                   </figcaption>
+                 </figure>
+               </li>
+               <li class="cards-items">
+                 <figure>
+                   <img
+                     src="./images/laptop.jpg"
+                     alt="open laptop"
+                     width="370"
+                     height="294"
+                   />
+                   <figcaption class="border-image">
+                     <p class="photo-portfolio"><b>Growing Business</b></p>
+                     <p class="photo-describe-portfolio">Aplikacja</p>
+                   </figcaption>
+                 </figure>
+               </li>
+             </ul>
+           </section></container>
+         </main>
+         <footer class="footer">
+           <div class="container footer-box">
+             <a href="./index.html" class="footer-logo link-no-underline"
+               ><span class="blue-text">Web</span>Studio</a
+             >
+             <address>
+               <ul class="footer-list">
+                 <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+                 <li>
+                   <a
+                     href="mailto:info@example.com"
+                     class="address-link link-no-underline blue-text"
+                     >info@example.com</a
+                   >
+                 </li>
+                 <li>
+                   <a
+                     href="+48111111111"
+                     class="address-link link-no-underline blue-text"
+                     >+48 111 111 111</a
+                   >
+                 </li>
+               </ul>
+             </address>
+           </div>
+         </footer>
+       </body>
+     </html>
