--- a/portfolio.html
+++ b/portfolio.html
@@ -26,21 +26,21 @@
         </section>
         <nav class="nav">
           <ul class="navigate-list">
-            <li>
+            <li class="menu"> 
               <a
                 href="./index.html"
                 class="link-style link-no-underline blue-text"
                 >Agencja</a
               >
             </li>
-            <li>
+            <li class="menu">
               <a
                 href="./portfolio.html"
                 class="link-style link-no-underline blue-text"
                 ><span class="blue-text">Portfolio</span></a
               >
             </li>
-            <li>
+            <li class="menu">
               <a
                 href="./index.html"
                 class="link-style link-no-underline blue-text"
@@ -106,7 +106,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Technocrack</b></p>
                      <p class="photo-describe-portfolio">Strona internetowa</p>
                    </figcaption>
@@ -120,7 +120,7 @@
                     weidth="370"
                     height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio">
                        <b>Grafika New Orlean vs Golden Star</b>
                      </p>
@@ -136,7 +136,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Restauracja Seafood</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
                    </figcaption>
@@ -150,7 +150,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt Prime</b></p>
                      <p class="photo-describe-portfolio">Marketing</p>
                    </figcaption>
@@ -164,7 +164,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt Boxes</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
                    </figcaption>
@@ -178,7 +178,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Inspiration has no Borders</b></p>
                      <p class="photo-describe-portfolio">Strona internetowa</p>
                    </figcaption>
@@ -192,7 +192,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Magazyn Limited Edition</b></p>
                      <p class="photo-describe-portfolio">Dizajn</p>
                    </figcaption>
@@ -206,7 +206,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt LAB</b></p>
                      <p class="photo-describe-portfolio">Marketing</p>
                    </figcaption>
@@ -220,7 +220,7 @@
                      width="370"
                      height="294"
                    />
-                   <figcaption class="border-image">
+                   <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Growing Business</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
                    </figcaption>
