uwzględnienie wskazówek Mentora

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   <body>
     <header class="header">
       <div class="header-style container">
+        <div>
         <section class="logo-box">
           <a href="./index.html" class="logo-style link-no-underline"
             ><span class="blue-text">Web</span>Studio
           </a>
         </section>
         <nav class="nav">
-          <ul class="navigate-list">
+          </div>
+           <ul class="navigate-list">
             <li>
               <a
                 href="./index.html"
