--- a/index.html
+++ b/index.html
@@ -19,58 +19,59 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <header class="header">
-      <div class="header-style container">
-        <div>
-        <section class="logo-box">
-          <a href="./index.html" class="logo-style link-no-underline"
-            ><span class="blue-text">Web</span>Studio
-          </a>
-        </section>
-        <nav class="nav">
-          </div>
-           <ul class="navigate-list">
+    <div class="wrapper">
+      <header class="header">
+        <div class="header-style container">
+          <div>
+          <section class="logo-box">
+            <a href="./index.html" class="logo-style link-no-underline"
+              ><span class="blue-text">Web</span>Studio
+            </a>
+          </section>
+          <nav class="nav">
+            </div>
+             <ul class="navigate-list">
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  ><span class="blue-text">Agencja</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="./portfolio.html"
+                  class="link-style link-no-underline blue-text"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  >Kontakt</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact-style">
             <li>
               <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                ><span class="blue-text">Agencja</span></a
+                href="mailto:info@devstudio.com"
+                class="link-no-underline contact-link-style blue-text"
+                >info@devstudio.com</a
               >
             </li>
             <li>
               <a
-                href="./portfolio.html"
-                class="link-style link-no-underline blue-text"
-                >Portfolio</a
-              >
-            </li>
-            <li>
-              <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                >Kontakt</a
+                href="+48111111111"
+                class="link-no-underline contact-link-style blue-text"
+                >+48 111 111 111</a
               >
             </li>
           </ul>
-        </nav>
-        <ul class="contact-style">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="link-no-underline contact-link-style blue-text"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a
-              href="+48111111111"
-              class="link-no-underline contact-link-style blue-text"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
-      </div>
-    </header>
+        </div>
+      </header>    
     <main>
       <section class="top-section">
         <h1 class="top-section-text">
@@ -214,5 +215,6 @@
         </address>
       </div>
     </footer>
+    </div>
   </body>
 </html>
