--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="header-style container">
+        <div class="header-style-container">
           <div>
           <section class="logo-box">
             <a href="./index.html" class="logo-style link-no-underline"
