--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
+        <div class="container">
         <div class="header-style-container">
           <div>
           <section class="logo-box">
@@ -70,6 +71,7 @@
               >
             </li>
           </ul>
+        </div>
         </div>
       </header>    
     <main>
