--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
    </head>
    <body>
     <header class="header">
+      <div class="container">
       <div class="header-style container">
         <section class="logo-box">
           <a href="./index.html" class="logo-style link-no-underline"
@@ -65,7 +66,8 @@
               >+48 111 111 111</a
             >
           </li>
-        </ul>
+         </ul>
+        </div>
       </div>
     </header>
     <main>
