--- a/portfolio.html
+++ b/portfolio.html
@@ -12,21 +12,25 @@
       rel="stylesheet"/>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      rel="stylesheet"/>
+      rel="stylesheet" 
+      />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    </head>
    <body>
+    <div>
     <header class="header">
       <div class="container">
       <div class="header-style container">
+        <div>
         <section class="logo-box">
           <a href="./index.html" class="logo-style link-no-underline"
             ><span class="blue-text">Web</span>Studio
           </a>
         </section>
         <nav class="nav">
+          </div>
           <ul class="navigate-list">
             <li class="menu"> 
               <a
