--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <div class="wrapper">
+    <div>
       <header class="header">
         <div class="container">
         <div class="header-style-container">
