--- a/portfolio.html
+++ b/portfolio.html
@@ -20,60 +20,60 @@
    </head>
    <body>
     <div>
-    <header class="header">
-      <div class="container">
-      <div class="header-style container">
-        <div>
-        <section class="logo-box">
-          <a href="./index.html" class="logo-style link-no-underline"
-            ><span class="blue-text">Web</span>Studio
-          </a>
-        </section>
-        <nav class="nav">
-          </div>
-          <ul class="navigate-list">
-            <li class="menu"> 
+      <header class="header">
+        <div class="container">
+        <div class="header-style-container">
+          <div>
+          <section class="logo-box">
+            <a href="./index.html" class="logo-style link-no-underline"
+              ><span class="blue-text">Web</span>Studio
+            </a>
+          </section>
+          <nav class="nav">
+            </div>
+             <ul class="navigate-list">
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  >Agencja</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./portfolio.html"
+                  class="link-style link-no-underline blue-text"
+                  ><span class="blue-text">Portfolio</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="./index.html"
+                  class="link-style link-no-underline blue-text"
+                  >Kontakt</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact-style">
+            <li>
               <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                >Agencja</a
+                href="mailto:info@devstudio.com"
+                class="link-no-underline contact-link-style blue-text"
+                >info@devstudio.com</a
               >
             </li>
-            <li class="menu">
+            <li>
               <a
-                href="./portfolio.html"
-                class="link-style link-no-underline blue-text"
-                ><span class="blue-text">Portfolio</span></a
-              >
-            </li>
-            <li class="menu">
-              <a
-                href="./index.html"
-                class="link-style link-no-underline blue-text"
-                >Kontakt</a
+                href="+48111111111"
+                class="link-no-underline contact-link-style blue-text"
+                >+48 111 111 111</a
               >
             </li>
           </ul>
-        </nav>
-        <ul class="contact-style">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="link-no-underline contact-link-style blue-text"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a
-              href="+48111111111"
-              class="link-no-underline contact-link-style blue-text"
-              >+48 111 111 111</a
-            >
-          </li>
-         </ul>
         </div>
-      </div>
-    </header>
+        </div>
+      </header>    
     <main>
         <section class="container">
           <ul class="top-section-list">
