poprawa błędów z vaditora

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Studio</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com" />
-    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com" >
+    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin >
   </head>
-  <body>
+   <body>
     <div>
       <header class="header">
         <div class="container">
@@ -28,8 +28,8 @@
               ><span class="blue-text">Web</span>Studio
             </a>
           </section>
+          </div>
           <nav class="nav">
-            </div>
              <ul class="navigate-list">
               <li>
                 <a
@@ -76,7 +76,7 @@
     <main>
       <section class="top-section">
         <h1 class="top-section-text">
-          EFEKTYWNE ROZWIĄZANIA <br />
+          EFEKTYWNE ROZWIĄZANIA <br>
           DLA WASZEGO BIZNESU
         </h1>
         <button type="button" class="top-section-button">Zamów usługę</button>
@@ -122,7 +122,7 @@
               alt="hard-office-work"
               height="294"
               width="370"
-            />
+            >
           </li>
           <li>
             <img
@@ -130,7 +130,7 @@
               alt="mobiles-phones"
               height="294"
               width="370"
-            />
+            >
           </li>
           <li>
             <img
@@ -138,7 +138,7 @@
               alt="colorful-rainbow"
               height="294"
               width="370"
-            />
+            >
           </li>
         </ul>
       </section>
@@ -152,7 +152,7 @@
                 alt="brown shirt man"
                 height="260"
                 width="270"
-              />
+              >
               <h4 class="team-name">John Doe</h4>
               <p class="team-card">Product Designer</p>
             </li>
@@ -162,7 +162,7 @@
                 alt="blond hair woman"
                 height="260"
                 width="270"
-              />
+              >
               <h4 class="team-name">John Doe</h4>
               <p class="team-card">Frontend Developer</p>
             </li>
@@ -172,7 +172,7 @@
                 alt="white shirt man"
                 height="260"
                 width="270"
-              />
+              >
               <h4 class="team-name">John Doe</h4>
               <p class="team-card">Marketing</p>
             </li>
@@ -182,7 +182,7 @@
                 alt="black shirt man"
                 height="260"
                 width="270"
-              />
+              >
               <h4 class="team-name">John Doe</h4>
               <p class="team-card">Ul Designer</p>
             </li>
