--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Studio</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com" />
-    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com" >
+    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin >
   </head>
    <body>
     <div>
@@ -28,8 +28,8 @@
               ><span class="blue-text">Web</span>Studio
             </a>
           </section>
+          </div>
           <nav class="nav">
-            </div>
              <ul class="navigate-list">
               <li>
                 <a
@@ -72,7 +72,8 @@
           </ul>
         </div>
         </div>
-      </header>    
+      </header>  
+    </div>  
     <main>
         <section class="container">
           <ul class="top-section-list">
@@ -103,6 +104,7 @@
               </button>
             </li>
           </ul>
+        </section>
           <section class="container">
             <ul class="cards-box">
                <li class="cards-items">
@@ -112,7 +114,7 @@
                      alt="monitor screen"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Technocrack</b></p>
                      <p class="photo-describe-portfolio">Strona internetowa</p>
@@ -124,9 +126,9 @@
                    <img
                    src="./images/basketball.jpg"
                    alt="New Orlean vs Golden Star"
-                    weidth="370"
+                    width="370"
                     height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio">
                        <b>Grafika New Orlean vs Golden Star</b>
@@ -142,7 +144,7 @@
                      alt="The seafood restaurant log"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Restauracja Seafood</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
@@ -156,7 +158,7 @@
                      alt="black headphones"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt Prime</b></p>
                      <p class="photo-describe-portfolio">Marketing</p>
@@ -170,7 +172,7 @@
                      alt="brown and white boxes"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt Boxes</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
@@ -184,7 +186,7 @@
                      alt="black monitor with some codes"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Inspiration has no Borders</b></p>
                      <p class="photo-describe-portfolio">Strona internetowa</p>
@@ -198,7 +200,7 @@
                      alt="magazine pages"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Magazyn Limited Edition</b></p>
                      <p class="photo-describe-portfolio">Dizajn</p>
@@ -212,7 +214,7 @@
                      alt="lab label"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Projekt LAB</b></p>
                      <p class="photo-describe-portfolio">Marketing</p>
@@ -226,7 +228,7 @@
                      alt="open laptop"
                      width="370"
                      height="294"
-                   />
+                   >
                    <figcaption class="caption-border">
                      <p class="photo-portfolio"><b>Growing Business</b></p>
                      <p class="photo-describe-portfolio">Aplikacja</p>
@@ -234,7 +236,7 @@
                  </figure>
                </li>
              </ul>
-           </section></container>
+           </section> 
          </main>
          <footer class="footer">
            <div class="container footer-box">
